# better_web3_scripts

./: .gitignore  INSTALL.bat  README.md  START.bat  main.py  pyproject.toml  start.py
abi/: comet_bridge.json
common/: __init__.py  ask.py  author.py  config.py  file.py  logger.py  project.py
config/.default/: chains.toml  config.toml
config/default/: chains.toml  config.toml
demo/: tx_speed.py
scripts/: _logger.py  _scripts.py  ask.py  author.py  chains.py  comet.py  config.py  constants.py  input.py  logger.py  paths.py  process.py  proxy.py  questions.py  scripts.py  tx.py
scripts/bridge/: comet.py
