[tool.poetry]
name = "better-web3-scripts"
version = "2.0.0"
description = "Web3 scripts"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
better-web3 = "3.2.1"
questionary = "^2"
tqdm = "^4.66"
loguru = "^0.7"
pydantic = ">=1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
